--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ authors = [
     {name = "Sardius",email = "0xsardius@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12, <4.0"
 dependencies = [
+    "langchain (>=0.3.18,<0.4.0)",
+    "langchain-openai (>=0.3.4,<0.4.0)",
+    "langchain-anthropic (>=0.3.7,<0.4.0)",
+    "langchain-community (>=0.3.17,<0.4.0)"
 ]
 
 
