--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "langchain (>=0.3.18,<0.4.0)",
     "langchain-openai (>=0.3.4,<0.4.0)",
     "langchain-anthropic (>=0.3.7,<0.4.0)",
-    "langchain-community (>=0.3.17,<0.4.0)"
+    "langchain-community (>=0.3.17,<0.4.0)",
+    "langchainhub (>=0.1.21,<0.2.0)"
 ]
 
 
