--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "langchain-app-01"
+name = "icebreaker-langchain"
 version = "0.1.0"
 description = ""
 authors = [
@@ -12,7 +12,8 @@ dependencies = [
     "langchain-openai (>=0.3.4,<0.4.0)",
     "langchain-anthropic (>=0.3.7,<0.4.0)",
     "langchain-community (>=0.3.17,<0.4.0)",
-    "langchainhub (>=0.1.21,<0.2.0)"
+    "langchainhub (>=0.1.21,<0.2.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 
 
